repl working again on jdk 10